--- a/estilos/style.css
+++ b/estilos/style.css
@@ -84,10 +84,11 @@ hr{
 }
 
 td{
-    width: 50%;
+    width: 164px;
     padding-top: 16px;
     padding-bottom: 16px;
     border-bottom: 1px solid #E3DDD7;
+    display: inline-block;
 }
 td:first-child{
     padding-left: 0;
