--- a/projeto8/style.css
+++ b/projeto8/style.css
@@ -68,3 +68,10 @@ a.destaque{
     margin-bottom: 30px;
     box-shadow: 0px 12px 20px 0px #392ae3bb;
 }
+@media screen and (min-width:481px){
+    main{
+        width: 450px;
+        margin: auto;
+        margin-top: 5%;
+    }
+}
